[gd_scene load_steps=5 format=2]

[ext_resource path="res://MusicController.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1.2, 7.4, 8.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -38.706, -16.96, -16.96, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Music:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[node name="MusicController" type="Node"]
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="fade_in" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )

[node name="fade_out" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 2 )

[node name="fade_in_quick" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 3 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
